--- a/resources/web/index.html
+++ b/resources/web/index.html
@@ -71,9 +71,11 @@
         <h1>Dru Chat</h1>
     </div>
 
+    <!-- The message container that will hold all the events, messages from the server and other users -->
     <div class="messages" id="messages">
     </div>
 
+    <!-- The form with the text input and the button to send messages -->
     <div class="form">
         <label for="commandInput">Enter message or command (starting from slash /):</label>
         <input type="button" id="sendButton" value="send">
